--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -61,4 +61,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:text="Comberter"
         />
+    <Button
+        android:id="@+id/btnCalculatorr"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/btnComberter"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Calculator Normal"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
